--- a/src/main/resources/templates/fragments/chat-section.html
+++ b/src/main/resources/templates/fragments/chat-section.html
@@ -67,7 +67,8 @@
         </div>
         <div class="h-full overflow-hidden py-4">
             <div class="h-full overflow-y-auto">
-                <div class="grid grid-cols-12 gap-y-2">
+                <div id="chat-container" class="grid grid-cols-12 gap-y-2">
+
                     <div class="col-start-1 col-end-8 p-3 rounded-lg">
                         <div class="flex flex-row items-center">
                             <div class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0">
@@ -78,12 +79,9 @@
                                 <div class="absolute text-xs bottom-0 right-0 -mb-5 mr-2 text-gray-500">
                                     8:17 pm
                                 </div>
-
                             </div>
                         </div>
                     </div>
-
-
 
                     <div class="col-start-6 col-end-13 p-3 rounded-lg">
                         <div class="flex items-center justify-start flex-row-reverse">
@@ -99,6 +97,10 @@
                         </div>
                     </div>
 
+                    <div th:each="message : ${chatMessages}">
+                        <strong th:text="${message.sender}">Sender</strong>:
+                        <span th:text="${message.content}">Message Content</span>
+                    </div>
 
 
                     <div class="col-start-1 col-end-8 p-3 rounded-lg">
@@ -156,6 +158,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
